--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -2,7 +2,7 @@ flutter_native_splash:
   color: "#FFFFFF"
 
   android_12:
-    image: image/solQuiz_logo2_bg3.png
+    image: image/solQuiz_logo2.png
     color: "#FFFFFF"
     icon_background_color: "#FFFFFF"
     fullscreen: true
