--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   # 프로그레스 바
   percent_indicator: ^4.2.3
 
+  http: ^0.13.3
+
 
 dev_dependencies:
 
@@ -68,7 +70,9 @@ flutter_launcher_icons:
   android: "launcher_icons"
   ios: true
   image_path: "image/solQuiz_logo2_circle.png"
-  min_sdk_android: 16   # android min sdk min:16, default 21
+  min_sdk_android: 16
+
+  # android min sdk min:16, default 21
   web:
     generate: true
     image_path: "image/solQuiz_logo2_circle.png"
